@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2023, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -26,7 +26,6 @@
  * @bug JDK-8310130
  * @summary Special test cases for PhaseIdealLoop::move_unordered_reduction_out_of_loop
  *          Here a case with partial vectorization of the reduction.
- * @requires vm.bits == "64"
  * @library /test/lib /
  * @run driver compiler.loopopts.superword.TestUnorderedReductionPartialVectorization
  */
@@ -40,7 +39,10 @@ public class TestUnorderedReductionPartialVectorization {
     static final int ITER  = 10;
 
     public static void main(String[] args) {
-        TestFramework.run();
+        TestFramework.runWithFlags("-XX:+UnlockExperimentalVMOptions", "-XX:-UseCompactObjectHeaders", "-XX:-AlignVector");
+        TestFramework.runWithFlags("-XX:+UnlockExperimentalVMOptions", "-XX:-UseCompactObjectHeaders", "-XX:+AlignVector");
+        TestFramework.runWithFlags("-XX:+UnlockExperimentalVMOptions", "-XX:+UseCompactObjectHeaders", "-XX:-AlignVector");
+        TestFramework.runWithFlags("-XX:+UnlockExperimentalVMOptions", "-XX:+UseCompactObjectHeaders", "-XX:+AlignVector");
     }
 
     @Run(test = {"test1"})
@@ -62,9 +64,11 @@ public class TestUnorderedReductionPartialVectorization {
     @IR(counts = {IRNode.LOAD_VECTOR_I,   IRNode.VECTOR_SIZE + "min(max_int, max_long)", "> 0",
                   IRNode.VECTOR_CAST_I2L, IRNode.VECTOR_SIZE + "min(max_int, max_long)", "> 0",
                   IRNode.OR_REDUCTION_V,                                                 "> 0",},
-        applyIfCPUFeatureOr = {"avx2", "true"})
+        applyIfOr = {"AlignVector", "false", "UseCompactObjectHeaders", "false"},
+        applyIfPlatform = {"64-bit", "true"},
+        applyIfCPUFeatureOr = {"avx2", "true", "rvv", "true"})
     static long test1(int[] data, long sum) {
-        for (int i = 0; i < data.length; i++) {
+        for (int i = 0; i < data.length; i+=2) {
             // Mixing int and long ops means we only end up allowing half of the int
             // loads in one pack, and we have two int packs. The first pack has one
             // of the pairs missing because of the store, which creates a dependency.
@@ -77,6 +81,22 @@ public class TestUnorderedReductionPartialVectorization {
             int v = data[i]; // int read
             data[0] = 0;     // ruin the first pack
             sum |= v;        // long reduction (and implicit cast from int to long)
+
+            // This example used to rely on that reductions were ignored in SuperWord::unrolling_analysis,
+            // and hence the largest data type in the loop was the ints. This would then unroll the doubles
+            // for twice the vector length, and this resulted in us having twice as many packs. Because of
+            // the store "data[0] = 0", the first packs were destroyed, since they do not have power of 2
+            // size.
+            // Now, we no longer ignore reductions, and now we unroll half as much before SuperWord. This
+            // means we would only get one pack per operation, and that one would get ruined, and we have
+            // no vectorization. We now ensure there are again 2 packs per operation with a 2x hand unroll.
+            int v2 = data[i + 1];
+            sum |= v2;
+
+            // With AlignVector, we need 8-byte alignment of vector loads/stores.
+            // UseCompactObjectHeaders=false                 UseCompactObjectHeaders=true
+            // adr = base + 16 + 8*i  ->  always             adr = base + 12 + 8*i  ->  never
+            // -> vectorize                                  -> no vectorization
         }
         return sum;
     }
