@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -21,7 +21,6 @@
  * questions.
  */
 
-import java.io.FilePermission;
 import java.io.IOException;
 import java.io.UncheckedIOException;
 import java.lang.module.ModuleDescriptor;
@@ -30,22 +29,14 @@ import java.lang.module.ModuleReference;
 import java.lang.reflect.Field;
 import java.lang.reflect.Modifier;
 import java.lang.reflect.InaccessibleObjectException;
-import java.lang.reflect.ReflectPermission;
 import java.net.URI;
 import java.nio.file.FileSystem;
 import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.security.CodeSource;
-import java.security.Permission;
-import java.security.PermissionCollection;
-import java.security.Permissions;
-import java.security.Policy;
-import java.security.ProtectionDomain;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Deque;
-import java.util.Enumeration;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
@@ -53,8 +44,6 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.PropertyPermission;
-import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.stream.Collectors;
 
@@ -64,12 +53,11 @@ import jdk.internal.module.Modules;
  * @test
  * @bug 8065552 8309532
  * @summary test that all public fields returned by getDeclaredFields() can
- *          be set accessible if the right permission is granted; this test
+ *          be set accessible; this test
  *          loads all classes and get their declared fields
  *          and call setAccessible(false) followed by setAccessible(true);
  * @modules java.base/jdk.internal.module
- * @run main/othervm --add-modules=ALL-SYSTEM FieldSetAccessibleTest UNSECURE
- * @run main/othervm --add-modules=ALL-SYSTEM -Djava.security.manager=allow FieldSetAccessibleTest SECURE
+ * @run main/othervm --add-modules=ALL-SYSTEM FieldSetAccessibleTest
  *
  * @author danielfuchs
  */
@@ -149,44 +137,38 @@ public class FieldSetAccessibleTest {
     /**
      * @param args the command line arguments:
      *
-     *     SECURE|UNSECURE [startIndex (default=0)] [maxSize (default=Long.MAX_VALUE)]
+     *     [startIndex (default=0)] [maxSize (default=Long.MAX_VALUE)]
      *
      * @throws java.lang.Exception if the test fails
      */
     public static void main(String[] args) throws Exception {
         if (args == null || args.length == 0) {
-            args = new String[] {"SECURE", "0"};
-        } else if (args.length > 3) {
+            args = new String[] {"0"};
+        } else if (args.length > 2) {
             throw new RuntimeException("Expected at most one argument. Found "
                     + Arrays.asList(args));
         }
         try {
-            if (args.length > 1) {
-                startIndex = Long.parseLong(args[1]);
+            if (args.length > 0) {
+                startIndex = Long.parseLong(args[0]);
                 if (startIndex < 0) {
-                    throw new IllegalArgumentException("startIndex args[1]: "
+                    throw new IllegalArgumentException("startIndex args[0]: "
                             + startIndex);
                 }
             }
-            if (args.length > 2) {
-                maxSize = Long.parseLong(args[2]);
+            if (args.length > 1) {
+                maxSize = Long.parseLong(args[1]);
                 if (maxSize <= 0) {
                     maxSize = Long.MAX_VALUE;
                 }
                 maxIndex = (Long.MAX_VALUE - startIndex) < maxSize
                         ? Long.MAX_VALUE : startIndex + maxSize;
             }
-            TestCase.valueOf(args[0]).run();
+            test(listAllClassNames());
         } catch (OutOfMemoryError oome) {
             System.err.println(classCount.get());
             throw oome;
         }
-    }
-
-    public static void run(TestCase test) {
-        System.out.println("Testing " + test);
-        test(listAllClassNames());
-        System.out.println("Passed " + test);
     }
 
     static Iterable<String> listAllClassNames() {
@@ -345,146 +327,4 @@ public class FieldSetAccessibleTest {
             return visited;
         }
     }
-
-    // Test with or without a security manager
-    public static enum TestCase {
-        UNSECURE, SECURE;
-        public void run() throws Exception {
-            System.out.println("Running test case: " + name());
-            Configure.setUp(this);
-            FieldSetAccessibleTest.run(this);
-        }
-    }
-
-    // A helper class to configure the security manager for the test,
-    // and bypass it when needed.
-    static class Configure {
-        static Policy policy = null;
-        static final ThreadLocal<AtomicBoolean> allowAll = new ThreadLocal<AtomicBoolean>() {
-            @Override
-            protected AtomicBoolean initialValue() {
-                return  new AtomicBoolean(false);
-            }
-        };
-        static void setUp(TestCase test) {
-            switch (test) {
-                case SECURE:
-                    if (policy == null && System.getSecurityManager() != null) {
-                        throw new IllegalStateException("SecurityManager already set");
-                    } else if (policy == null) {
-                        policy = new SimplePolicy(TestCase.SECURE, allowAll);
-                        Policy.setPolicy(policy);
-                        System.setSecurityManager(new SecurityManager());
-                    }
-                    if (System.getSecurityManager() == null) {
-                        throw new IllegalStateException("No SecurityManager.");
-                    }
-                    if (policy == null) {
-                        throw new IllegalStateException("policy not configured");
-                    }
-                    break;
-                case UNSECURE:
-                    if (System.getSecurityManager() != null) {
-                        throw new IllegalStateException("SecurityManager already set");
-                    }
-                    break;
-                default:
-                    throw new InternalError("No such testcase: " + test);
-            }
-        }
-        static void doPrivileged(Runnable run) {
-            allowAll.get().set(true);
-            try {
-                run.run();
-            } finally {
-                allowAll.get().set(false);
-            }
-        }
-    }
-
-    // A Helper class to build a set of permissions.
-    static final class PermissionsBuilder {
-        final Permissions perms;
-        public PermissionsBuilder() {
-            this(new Permissions());
-        }
-        public PermissionsBuilder(Permissions perms) {
-            this.perms = perms;
-        }
-        public PermissionsBuilder add(Permission p) {
-            perms.add(p);
-            return this;
-        }
-        public PermissionsBuilder addAll(PermissionCollection col) {
-            if (col != null) {
-                for (Enumeration<Permission> e = col.elements(); e.hasMoreElements(); ) {
-                    perms.add(e.nextElement());
-                }
-            }
-            return this;
-        }
-        public Permissions toPermissions() {
-            final PermissionsBuilder builder = new PermissionsBuilder();
-            builder.addAll(perms);
-            return builder.perms;
-        }
-    }
-
-    // Policy for the test...
-    public static class SimplePolicy extends Policy {
-
-        static final Policy DEFAULT_POLICY = Policy.getPolicy();
-
-        final Permissions permissions;
-        final Permissions allPermissions;
-        final ThreadLocal<AtomicBoolean> allowAll;
-        public SimplePolicy(TestCase test, ThreadLocal<AtomicBoolean> allowAll) {
-            this.allowAll = allowAll;
-
-            // Permission needed by the tested code exercised in the test
-            permissions = new Permissions();
-            permissions.add(new RuntimePermission("fileSystemProvider"));
-            permissions.add(new RuntimePermission("createClassLoader"));
-            permissions.add(new RuntimePermission("closeClassLoader"));
-            permissions.add(new RuntimePermission("getClassLoader"));
-            permissions.add(new RuntimePermission("accessDeclaredMembers"));
-            permissions.add(new RuntimePermission("accessSystemModules"));
-            permissions.add(new ReflectPermission("suppressAccessChecks"));
-            permissions.add(new PropertyPermission("*", "read"));
-            permissions.add(new FilePermission("<<ALL FILES>>", "read"));
-
-            // these are used for configuring the test itself...
-            allPermissions = new Permissions();
-            allPermissions.add(new java.security.AllPermission());
-        }
-
-        @Override
-        public boolean implies(ProtectionDomain domain, Permission permission) {
-            if (allowAll.get().get()) return allPermissions.implies(permission);
-            if (permissions.implies(permission)) return true;
-            if (permission instanceof java.lang.RuntimePermission) {
-                if (permission.getName().startsWith("accessClassInPackage.")) {
-                    // add these along to the set of permission we have, when we
-                    // discover that we need them.
-                    permissions.add(permission);
-                    return true;
-                }
-            }
-            if (DEFAULT_POLICY.implies(domain, permission)) return true;
-            return false;
-        }
-
-        @Override
-        public PermissionCollection getPermissions(CodeSource codesource) {
-            return new PermissionsBuilder().addAll(allowAll.get().get()
-                    ? allPermissions : permissions).toPermissions();
-        }
-
-        @Override
-        public PermissionCollection getPermissions(ProtectionDomain domain) {
-            return new PermissionsBuilder().addAll(allowAll.get().get()
-                    ? allPermissions : permissions).toPermissions();
-        }
-    }
-
 }
