@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -40,7 +40,7 @@ import java.util.logging.Logger;
  *       drainLoggerRefQueueBounded / readConfiguration
  * @modules java.logging
  *          java.management
- * @run main/othervm -Djava.security.manager=allow TestLogConfigurationDeadLock
+ * @run main/othervm TestLogConfigurationDeadLock
  * @author danielfuchs
  */
 // This test is a best effort to try & detect issues. The test itself will run
@@ -67,8 +67,6 @@ public class TestLogConfigurationDeadLock {
     static final AtomicLong checkCount = new AtomicLong(0);
 
     /**
-     * This test will run both with and without a security manager.
-     *
      * The test starts a number of threads that will call
      *     LogManager.readConfiguration() concurrently (ReadConf), then starts
      *     a number of threads that will create new loggers concurrently
@@ -78,32 +76,12 @@ public class TestLogConfigurationDeadLock {
      * If after 4secs no deadlock was detected and no exception was thrown
      * then the test is considered a success and passes.
      *
-     * This procedure is done twice: once without a security manager and once
-     * again with a security manager - which means the test takes ~8secs to
-     * run.
-     *
-     * Note that 8sec may not be enough to detect issues if there are some.
+     * Note that 4sec may not be enough to detect issues if there are some.
      * This is a best effort test.
      *
      * @param args the command line arguments
      */
     public static void main(String[] args) throws Exception {
-
-        // test without security
-        System.out.println("No security");
-        test();
-
-        // test with security
-        System.out.println("\nWith security");
-        Policy.setPolicy(new Policy() {
-            @Override
-            public boolean implies(ProtectionDomain domain, Permission permission) {
-                if (super.implies(domain, permission)) return true;
-                // System.out.println("Granting " + permission);
-                return true; // all permissions
-            }
-        });
-        System.setSecurityManager(new SecurityManager());
         test();
     }
 
