@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -22,18 +22,25 @@
  */
 package jdk.jpackage.test;
 
+import static jdk.jpackage.internal.util.function.ExceptionBox.rethrowUnchecked;
+import static jdk.jpackage.internal.util.function.ThrowingSupplier.toSupplier;
+
 import java.io.IOException;
+import java.lang.reflect.Method;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.NoSuchElementException;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
-import java.util.function.BiConsumer;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
-import jdk.jpackage.test.Functional.ThrowingRunnable;
+import jdk.jpackage.internal.util.function.ThrowingRunnable;
 import jdk.jpackage.test.PackageTest.PackageHandlers;
 
 public class WindowsHelper {
@@ -61,37 +68,24 @@ public class WindowsHelper {
         return Path.of(cmd.getArgumentValue("--install-dir", cmd::name));
     }
 
-    // Tests have problems on windows where path in the temp dir are too long
-    // for the wix tools.  We can't use a tempDir outside the TKit's WorkDir, so
-    // we minimize both the tempRoot directory name (above) and the tempDir name
-    // (below) to the extension part (which is necessary to differenciate between
-    // the multiple PackageTypes that will be run for one JPackageCommand).
-    // It might be beter if the whole work dir name was shortened from:
-    // jtreg_open_test_jdk_tools_jpackage_share_jdk_jpackage_tests_BasicTest_java.
-    public static Path getTempDirectory(JPackageCommand cmd, Path tempRoot) {
-        String ext = cmd.outputBundle().getFileName().toString();
-        int i = ext.lastIndexOf(".");
-        if (i > 0 && i < (ext.length() - 1)) {
-            ext = ext.substring(i+1);
-        }
-        return tempRoot.resolve(ext);
-    }
-
-    private static void runMsiexecWithRetries(Executor misexec) {
+    private static int runMsiexecWithRetries(Executor misexec, Optional<Path> msiLog) {
         Executor.Result result = null;
+        final boolean isUnpack = misexec.getExecutable().orElseThrow().equals(Path.of("cmd"));
+        final List<String> origArgs = msiLog.isPresent() ? misexec.getAllArguments() : null;
         for (int attempt = 0; attempt < 8; ++attempt) {
+            msiLog.ifPresent(v -> misexec.clearArguments().addArguments(origArgs).addArgument("/L*v").addArgument(v));
             result = misexec.executeWithoutExitCodeCheck();
 
-            if (result.exitCode == 1605) {
+            if (result.exitCode() == 1605) {
                 // ERROR_UNKNOWN_PRODUCT, attempt to uninstall not installed
                 // package
-                return;
+                return result.exitCode();
             }
 
             // The given Executor may either be of an msiexec command or an
             // unpack.bat script containing the msiexec command. In the later
             // case, when misexec returns 1618, the unpack.bat may return 1603
-            if ((result.exitCode == 1618) || (result.exitCode == 1603)) {
+            if ((result.exitCode() == 1618) || (result.exitCode() == 1603 && isUnpack)) {
                 // Another installation is already in progress.
                 // Wait a little and try again.
                 Long timeout = 1000L * (attempt + 3); // from 3 to 10 seconds
@@ -101,69 +95,172 @@ public class WindowsHelper {
             break;
         }
 
-        result.assertExitCodeIsZero();
+        return result.exitCode();
     }
 
-    static PackageHandlers createMsiPackageHandlers() {
-        BiConsumer<JPackageCommand, Boolean> installMsi = (cmd, install) -> {
-            cmd.verifyIsOfType(PackageType.WIN_MSI);
-            runMsiexecWithRetries(Executor.of("msiexec", "/qn", "/norestart",
-                    install ? "/i" : "/x").addArgument(cmd.outputBundle().normalize()));
-        };
+    static PackageHandlers createMsiPackageHandlers(boolean createMsiLog) {
+        return new PackageHandlers(cmd -> installMsi(cmd, createMsiLog),
+                cmd -> uninstallMsi(cmd, createMsiLog), WindowsHelper::unpackMsi);
+    }
 
-        PackageHandlers msi = new PackageHandlers();
-        msi.installHandler = cmd -> installMsi.accept(cmd, true);
-        msi.uninstallHandler = cmd -> {
-            if (Files.exists(cmd.outputBundle())) {
-                installMsi.accept(cmd, false);
+    private static Optional<Path> configureMsiLogFile(JPackageCommand cmd, boolean createMsiLog) {
+        final Optional<Path> msiLogFile;
+        if (createMsiLog) {
+            msiLogFile = Optional.of(TKit.createTempFile(String.format("logs\\%s-msi.log",
+                    cmd.packageType().getType())));
+        } else {
+            msiLogFile = Optional.empty();
+        }
+
+        cmd.winMsiLogFile(msiLogFile.orElse(null));
+
+        return msiLogFile;
+    }
+
+    private static int runMsiInstaller(JPackageCommand cmd, boolean createMsiLog, boolean install) {
+        cmd.verifyIsOfType(PackageType.WIN_MSI);
+        final var msiPath = TransientMsi.create(cmd).path();
+        return runMsiexecWithRetries(Executor.of("msiexec", "/qn", "/norestart",
+                install ? "/i" : "/x").addArgument(msiPath), configureMsiLogFile(cmd, createMsiLog));
+    }
+
+    private static int installMsi(JPackageCommand cmd, boolean createMsiLog) {
+        return runMsiInstaller(cmd, createMsiLog, true);
+    }
+
+    private static void uninstallMsi(JPackageCommand cmd, boolean createMsiLog) {
+        if (Files.exists(cmd.outputBundle())) {
+            runMsiInstaller(cmd, createMsiLog, false);
+        } else {
+            configureMsiLogFile(cmd, false);
+        }
+    }
+
+    private static Path unpackMsi(JPackageCommand cmd, Path destinationDir) {
+        cmd.verifyIsOfType(PackageType.WIN_MSI);
+        configureMsiLogFile(cmd, false);
+        final Path unpackBat = destinationDir.resolve("unpack.bat");
+        final Path unpackDir = destinationDir.resolve(
+                TKit.removeRootFromAbsolutePath(
+                        getInstallationRootDirectory(cmd)));
+
+        final Path msiPath = TransientMsi.create(cmd).path();
+
+        // Put msiexec in .bat file because can't pass value of TARGETDIR
+        // property containing spaces through ProcessBuilder properly.
+        // Set folder permissions to allow msiexec unpack msi bundle.
+        TKit.createTextFile(unpackBat, List.of(
+                String.format("icacls \"%s\" /inheritance:e /grant Users:M",
+                        destinationDir),
+                String.join(" ", List.of(
+                "msiexec",
+                "/a",
+                String.format("\"%s\"", msiPath),
+                "/qn",
+                String.format("TARGETDIR=\"%s\"",
+                        unpackDir.toAbsolutePath().normalize())))));
+        runMsiexecWithRetries(Executor.of("cmd", "/c", unpackBat.toString()), Optional.empty());
+
+        //
+        // WiX3 uses "." as the value of "DefaultDir" field for "ProgramFiles64Folder" folder in msi's Directory table
+        // WiX4 uses "PFiles64" as the value of "DefaultDir" field for "ProgramFiles64Folder" folder in msi's Directory table
+        // msiexec creates "Program Files/./<App Installation Directory>" from WiX3 msi which translates to "Program Files/<App Installation Directory>"
+        // msiexec creates "Program Files/PFiles64/<App Installation Directory>" from WiX4 msi
+        // So for WiX4 msi we need to transform "Program Files/PFiles64/<App Installation Directory>" into "Program Files/<App Installation Directory>"
+        //
+        // WiX4 does the same thing for %LocalAppData%.
+        //
+        for (var extraPathComponent : List.of("PFiles64", "LocalApp")) {
+            if (Files.isDirectory(unpackDir.resolve(extraPathComponent))) {
+                Path installationSubDirectory = getInstallationSubDirectory(cmd);
+                Path from = Path.of(extraPathComponent).resolve(installationSubDirectory);
+                Path to = installationSubDirectory;
+
+                ThrowingRunnable.toRunnable(() -> {
+                    Files.createDirectories(unpackDir.resolve(to).getParent());
+                }).run();
+
+                // Files.move() occasionally results into java.nio.file.AccessDeniedException
+                Executor.tryRunMultipleTimes(ThrowingRunnable.toRunnable(() -> {
+                    TKit.trace(String.format("Convert [%s] into [%s] in [%s] directory", from, to, unpackDir));
+                    final var dstDir = unpackDir.resolve(to);
+                    TKit.deleteDirectoryRecursive(dstDir);
+                    Files.move(unpackDir.resolve(from), dstDir);
+                    TKit.deleteDirectoryRecursive(unpackDir.resolve(extraPathComponent));
+                }), 3, 5);
             }
-        };
-        msi.unpackHandler = (cmd, destinationDir) -> {
-            cmd.verifyIsOfType(PackageType.WIN_MSI);
-            final Path unpackBat = destinationDir.resolve("unpack.bat");
-            final Path unpackDir = destinationDir.resolve(
-                    TKit.removeRootFromAbsolutePath(
-                            getInstallationRootDirectory(cmd)));
-
-            // Put msiexec in .bat file because can't pass value of TARGETDIR
-            // property containing spaces through ProcessBuilder properly.
-            // Set folder permissions to allow msiexec unpack msi bundle.
-            TKit.createTextFile(unpackBat, List.of(
-                    String.format("icacls \"%s\" /inheritance:e /grant Users:M",
-                            destinationDir),
-                    String.join(" ", List.of(
-                    "msiexec",
-                    "/a",
-                    String.format("\"%s\"", cmd.outputBundle().normalize()),
-                    "/qn",
-                    String.format("TARGETDIR=\"%s\"",
-                            unpackDir.toAbsolutePath().normalize())))));
-            runMsiexecWithRetries(Executor.of("cmd", "/c", unpackBat.toString()));
-            return destinationDir;
-        };
-        return msi;
+        }
+        return destinationDir;
     }
 
-    static PackageHandlers createExePackageHandlers() {
-        BiConsumer<JPackageCommand, Boolean> installExe = (cmd, install) -> {
-            cmd.verifyIsOfType(PackageType.WIN_EXE);
-            Executor exec = new Executor().setExecutable(cmd.outputBundle());
-            if (install) {
-                exec.addArgument("/qn").addArgument("/norestart");
+    static PackageHandlers createExePackageHandlers(boolean createMsiLog) {
+        return new PackageHandlers(cmd -> installExe(cmd, createMsiLog), WindowsHelper::uninstallExe, Optional.empty());
+    }
+
+    private static int runExeInstaller(JPackageCommand cmd, boolean createMsiLog, boolean install) {
+        cmd.verifyIsOfType(PackageType.WIN_EXE);
+        Executor exec = new Executor().setExecutable(cmd.outputBundle());
+        if (install) {
+            exec.addArgument("/qn").addArgument("/norestart");
+        } else {
+            exec.addArgument("uninstall");
+        }
+        return runMsiexecWithRetries(exec, configureMsiLogFile(cmd, createMsiLog));
+    }
+
+    private static int installExe(JPackageCommand cmd, boolean createMsiLog) {
+        return runExeInstaller(cmd, createMsiLog, true);
+    }
+
+    private static void uninstallExe(JPackageCommand cmd) {
+        if (Files.exists(cmd.outputBundle())) {
+            runExeInstaller(cmd, false, false);
+        } else {
+            configureMsiLogFile(cmd, false);
+        }
+    }
+
+    record TransientMsi(Path path) {
+        static TransientMsi create(JPackageCommand cmd) {
+            var outputMsiPath = cmd.outputBundle().normalize();
+            if (isPathTooLong(outputMsiPath)) {
+                return toSupplier(() -> {
+                    var transientMsiPath = TKit.createTempDirectory("msi-copy").resolve("a.msi").normalize();
+                    TKit.trace(String.format("Copy [%s] to [%s]", outputMsiPath, transientMsiPath));
+                    Files.copy(outputMsiPath, transientMsiPath);
+                    return new TransientMsi(transientMsiPath);
+                }).get();
             } else {
-                exec.addArgument("uninstall");
+                return new TransientMsi(outputMsiPath);
             }
-            runMsiexecWithRetries(exec);
-        };
+        }
+    }
 
-        PackageHandlers exe = new PackageHandlers();
-        exe.installHandler = cmd -> installExe.accept(cmd, true);
-        exe.uninstallHandler = cmd -> {
-            if (Files.exists(cmd.outputBundle())) {
-                installExe.accept(cmd, false);
+    public enum WixType {
+        WIX3,
+        WIX4
+    }
+
+    public static WixType getWixTypeFromVerboseJPackageOutput(Executor.Result result) {
+        return result.getOutput().stream().map(str -> {
+            if (str.contains("[light.exe]")) {
+                return WixType.WIX3;
+            } else if (str.contains("[wix.exe]")) {
+                return WixType.WIX4;
+            } else {
+                return null;
             }
-        };
-        return exe;
+        }).filter(Objects::nonNull).reduce((a, b) -> {
+            throw new IllegalArgumentException("Invalid input: multiple invocations of WiX tools");
+        }).orElseThrow(() -> new IllegalArgumentException("Invalid input: no invocations of WiX tools"));
+    }
+
+    static Optional<Path> toShortPath(Path path) {
+        if (isPathTooLong(path)) {
+            return Optional.of(ShortPathUtils.toShortPath(path));
+        } else {
+            return Optional.empty();
+        }
     }
 
     static void verifyDesktopIntegration(JPackageCommand cmd,
@@ -204,8 +301,96 @@ public class WindowsHelper {
                 "Failed to get file description of [%s]", pathToExeFile));
     }
 
+    public static void killProcess(long pid) {
+        Executor.of("taskkill", "/F", "/PID", Long.toString(pid)).dumpOutput(true).execute();
+    }
+
+    public static void killAppLauncherProcess(JPackageCommand cmd,
+            String launcherName, int expectedCount) {
+        var pids = findAppLauncherPIDs(cmd, launcherName);
+        try {
+            TKit.assertEquals(expectedCount, pids.length, String.format(
+                    "Check [%d] %s app launcher processes found running",
+                    expectedCount, Optional.ofNullable(launcherName).map(
+                            str -> "[" + str + "]").orElse("<main>")));
+        } finally {
+            if (pids.length != 0) {
+                killProcess(pids[0]);
+            }
+        }
+    }
+
+    private static long[] findAppLauncherPIDs(JPackageCommand cmd, String launcherName) {
+        // Get the list of PIDs and PPIDs of app launcher processes. Run setWinRunWithEnglishOutput(true) for JDK-8344275.
+        // wmic process where (name = "foo.exe") get ProcessID,ParentProcessID
+        final var result = Executor.of("wmic", "process", "where", "(name",
+                "=",
+                "\"" + cmd.appLauncherPath(launcherName).getFileName().toString() + "\"",
+                ")", "get", "ProcessID,ParentProcessID").dumpOutput(true).saveOutput().
+                setWinRunWithEnglishOutput(true).execute();
+        if ("No Instance(s) Available.".equals(result.stderr().findFirstLineOfOutput().map(String::trim).orElse(""))) {
+            return new long[0];
+        }
+
+        final var stdout = result.stdout();
+        String[] headers = Stream.of(stdout.getFirstLineOfOutput().split("\\s+", 2)).map(
+                String::trim).map(String::toLowerCase).toArray(String[]::new);
+        final Pattern pattern;
+        if (headers[0].equals("parentprocessid") && headers[1].equals(
+                "processid")) {
+            pattern = Pattern.compile("^(?<ppid>\\d+)\\s+(?<pid>\\d+)\\s+$");
+        } else if (headers[1].equals("parentprocessid") && headers[0].equals(
+                "processid")) {
+            pattern = Pattern.compile("^(?<pid>\\d+)\\s+(?<ppid>\\d+)\\s+$");
+        } else {
+            throw new RuntimeException(
+                    "Unrecognizable output of \'wmic process\' command");
+        }
+
+        List<long[]> processes = stdout.getOutput().stream().skip(1).map(line -> {
+            Matcher m = pattern.matcher(line);
+            long[] pids = null;
+            if (m.matches()) {
+                pids = new long[]{Long.parseLong(m.group("pid")), Long.
+                    parseLong(m.group("ppid"))};
+            }
+            return pids;
+        }).filter(Objects::nonNull).toList();
+
+        switch (processes.size()) {
+            case 2 -> {
+                final long parentPID;
+                final long childPID;
+                if (processes.get(0)[0] == processes.get(1)[1]) {
+                    parentPID = processes.get(0)[0];
+                    childPID = processes.get(1)[0];
+                } else if (processes.get(1)[0] == processes.get(0)[1]) {
+                    parentPID = processes.get(1)[0];
+                    childPID = processes.get(0)[0];
+                } else {
+                    TKit.assertUnexpected("App launcher processes unrelated");
+                    return null; // Unreachable
+                }
+                return new long[]{parentPID, childPID};
+            }
+            case 1 -> {
+                return new long[]{processes.get(0)[0]};
+            }
+            default -> {
+                TKit.assertUnexpected(String.format(
+                        "Unexpected number of running processes [%d]",
+                        processes.size()));
+                return null; // Unreachable
+            }
+        }
+    }
+
     private static boolean isUserLocalInstall(JPackageCommand cmd) {
         return cmd.hasArgument("--win-per-user-install");
+    }
+
+    private static boolean isPathTooLong(Path path) {
+        return path.toString().length() > WIN_MAX_PATH;
     }
 
     private static class DesktopIntegrationVerifier {
@@ -268,14 +453,12 @@ public class WindowsHelper {
         }
 
         private void verifySystemDesktopShortcut(boolean exists) {
-            Path dir = Path.of(queryRegistryValueCache(
-                    SYSTEM_SHELL_FOLDERS_REGKEY, "Common Desktop"));
+            Path dir = SpecialFolder.COMMON_DESKTOP.getPath();
             verifyShortcut(dir.resolve(desktopShortcutPath), exists);
         }
 
         private void verifyUserLocalDesktopShortcut(boolean exists) {
-            Path dir = Path.of(
-                    queryRegistryValueCache(USER_SHELL_FOLDERS_REGKEY, "Desktop"));
+            Path dir = SpecialFolder.USER_DESKTOP.getPath();
             verifyShortcut(dir.resolve(desktopShortcutPath), exists);
         }
 
@@ -298,19 +481,22 @@ public class WindowsHelper {
             Path shortcutPath = shortcutsRoot.resolve(startMenuShortcutPath);
             verifyShortcut(shortcutPath, exists);
             if (!exists) {
-                TKit.assertPathNotEmptyDirectory(shortcutPath.getParent());
+                final var parentDir = shortcutPath.getParent();
+                if (Files.isDirectory(parentDir)) {
+                    TKit.assertDirectoryNotEmpty(parentDir);
+                } else {
+                    TKit.assertPathExists(parentDir, false);
+                }
             }
         }
 
         private void verifySystemStartMenuShortcut(boolean exists) {
-            verifyStartMenuShortcut(Path.of(queryRegistryValueCache(
-                    SYSTEM_SHELL_FOLDERS_REGKEY, "Common Programs")), exists);
+            verifyStartMenuShortcut(SpecialFolder.COMMON_START_MENU_PROGRAMS.getPath(), exists);
 
         }
 
         private void verifyUserLocalStartMenuShortcut(boolean exists) {
-            verifyStartMenuShortcut(Path.of(queryRegistryValueCache(
-                    USER_SHELL_FOLDERS_REGKEY, "Programs")), exists);
+            verifyStartMenuShortcut(SpecialFolder.USER_START_MENU_PROGRAMS.getPath(), exists);
         }
 
         private void verifyFileAssociationsRegistry(Path faFile) {
@@ -376,7 +562,7 @@ public class WindowsHelper {
         var status = Executor.of("reg", "query", keyPath, "/v", valueName)
                 .saveOutput()
                 .executeWithoutExitCodeCheck();
-        if (status.exitCode == 1) {
+        if (status.exitCode() == 1) {
             // Should be the case of no such registry value or key
             String lookupString = "ERROR: The system was unable to find the specified registry key or value.";
             TKit.assertTextStream(lookupString)
@@ -418,31 +604,107 @@ public class WindowsHelper {
         return value;
     }
 
-    private static String queryRegistryValueCache(String keyPath,
-            String valueName) {
-        String key = String.format("[%s][%s]", keyPath, valueName);
-        String value = REGISTRY_VALUES.get(key);
-        if (value == null) {
-            value = queryRegistryValue(keyPath, valueName);
-            REGISTRY_VALUES.put(key, value);
+    // See .NET special folders
+    private enum SpecialFolderDotNet {
+        Desktop,
+        CommonDesktop,
+
+        Programs,
+        CommonPrograms;
+
+        Path getPath() {
+            final var str = Executor.of("powershell", "-NoLogo", "-NoProfile",
+                    "-NonInteractive", "-Command",
+                    String.format("[Environment]::GetFolderPath('%s')", name())
+                    ).saveFirstLineOfOutput().execute().getFirstLineOfOutput();
+
+            TKit.trace(String.format("Value of .NET special folder '%s' is [%s]", name(), str));
+
+            return Path.of(str);
+        }
+    }
+
+    private record RegValuePath(String keyPath, String valueName) {
+        RegValuePath {
+            Objects.requireNonNull(keyPath);
+            Objects.requireNonNull(valueName);
         }
 
-        return value;
+        Optional<String> findValue() {
+            return Optional.ofNullable(queryRegistryValue(keyPath, valueName));
+        }
+    }
+
+    private enum SpecialFolder {
+        COMMON_START_MENU_PROGRAMS(SYSTEM_SHELL_FOLDERS_REGKEY, "Common Programs", SpecialFolderDotNet.CommonPrograms),
+        USER_START_MENU_PROGRAMS(USER_SHELL_FOLDERS_REGKEY, "Programs", SpecialFolderDotNet.Programs),
+
+        COMMON_DESKTOP(SYSTEM_SHELL_FOLDERS_REGKEY, "Common Desktop", SpecialFolderDotNet.CommonDesktop),
+        USER_DESKTOP(USER_SHELL_FOLDERS_REGKEY, "Desktop", SpecialFolderDotNet.Desktop);
+
+        SpecialFolder(String keyPath, String valueName) {
+            reg = new RegValuePath(keyPath, valueName);
+            alt = Optional.empty();
+        }
+
+        SpecialFolder(String keyPath, String valueName, SpecialFolderDotNet alt) {
+            reg = new RegValuePath(keyPath, valueName);
+            this.alt = Optional.of(alt);
+        }
+
+        Path getPath() {
+            return CACHE.computeIfAbsent(this, k -> reg.findValue().map(Path::of).orElseGet(() -> {
+                return alt.map(SpecialFolderDotNet::getPath).orElseThrow(() -> {
+                    return new NoSuchElementException(String.format("Failed to find path to %s folder", name()));
+                });
+            }));
+        }
+
+        private final RegValuePath reg;
+        private final Optional<SpecialFolderDotNet> alt;
+
+        private static final Map<SpecialFolder, Path> CACHE = new ConcurrentHashMap<>();
+    }
+
+    private static final class ShortPathUtils {
+        private ShortPathUtils() {
+            try {
+                var shortPathUtilsClass = Class.forName("jdk.jpackage.internal.ShortPathUtils");
+
+                getShortPathWrapper = shortPathUtilsClass.getDeclaredMethod(
+                        "getShortPathWrapper", String.class);
+                // Note: this reflection call requires
+                // --add-opens jdk.jpackage/jdk.jpackage.internal=ALL-UNNAMED
+                getShortPathWrapper.setAccessible(true);
+            } catch (ClassNotFoundException | NoSuchMethodException
+                    | SecurityException ex) {
+                throw rethrowUnchecked(ex);
+            }
+        }
+
+        static Path toShortPath(Path path) {
+            return Path.of(toSupplier(() -> (String) INSTANCE.getShortPathWrapper.invoke(
+                    null, path.toString())).get());
+        }
+
+        private final Method getShortPathWrapper;
+
+        private static final ShortPathUtils INSTANCE = new ShortPathUtils();
     }
 
     static final Set<Path> CRITICAL_RUNTIME_FILES = Set.of(Path.of(
             "bin\\server\\jvm.dll"));
 
     // jtreg resets %ProgramFiles% environment variable by some reason.
-    private final static Path PROGRAM_FILES = Path.of(Optional.ofNullable(
+    private static final Path PROGRAM_FILES = Path.of(Optional.ofNullable(
             System.getenv("ProgramFiles")).orElse("C:\\Program Files"));
 
-    private final static Path USER_LOCAL = Path.of(System.getProperty(
+    private static final Path USER_LOCAL = Path.of(System.getProperty(
             "user.home"),
             "AppData", "Local");
 
-    private final static String SYSTEM_SHELL_FOLDERS_REGKEY = "HKLM\\Software\\Microsoft\\Windows\\CurrentVersion\\Explorer\\Shell Folders";
-    private final static String USER_SHELL_FOLDERS_REGKEY = "HKCU\\Software\\Microsoft\\Windows\\CurrentVersion\\Explorer\\Shell Folders";
+    private static final String SYSTEM_SHELL_FOLDERS_REGKEY = "HKLM\\Software\\Microsoft\\Windows\\CurrentVersion\\Explorer\\Shell Folders";
+    private static final String USER_SHELL_FOLDERS_REGKEY = "HKCU\\Software\\Microsoft\\Windows\\CurrentVersion\\Explorer\\Shell Folders";
 
-    private static final Map<String, String> REGISTRY_VALUES = new HashMap<>();
+    private static final int WIN_MAX_PATH = 260;
 }
